--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="row mx-auto">
                   <div class="col-md-8">
                         <div class="row">
-                              <div class="col-md-6">
+                              <div class="col-md-6 col-sm-12">
                                     <div class="input-group mb-3">
                                           <input id="input-value" type="text" class="form-control" placeholder="Write what you want to drink" aria-label="Recipient's username" aria-describedby="button-addon2">
                                           <button onclick="getAllDrinks()" id="input-btn" class="btn btn-outline-primary" type="button" id="button-addon2">Button</button>
